[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main/Scripts/SettingsPopup.gd" type="Script" id=1]
[ext_resource path="res://Main/Scripts/Animations/Fade.gd" type="Script" id=2]
[ext_resource path="res://Main/Scenes/Partials/Settings.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=2]

resource_name = "fade_in"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "fade_out"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Settings" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="PopupDialog" type="PopupDialog" parent="." index="0"]

visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 643.0
margin_bottom = 491.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
script = ExtResource( 2 )
_sections_unfolded = [ "Margin", "Material", "Rect", "Visibility" ]

[node name="Settings" parent="PopupDialog" index="0" instance=ExtResource( 3 )]

[node name="FadeAnimation" type="AnimationPlayer" parent="PopupDialog" index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fade_in = SubResource( 2 )
anims/fade_out = SubResource( 3 )
blend_times = [  ]

[connection signal="fade_out_finished" from="PopupDialog" to="." method="_on_PopupDialog_fade_out_finished"]

[connection signal="animation_finished" from="PopupDialog/FadeAnimation" to="PopupDialog" method="_on_FadeAnimation_animation_finished"]


